cut uboot size to 163kb

--- a/common/Makefile
+++ b/common/Makefile
@@ -71,7 +71,7 @@ obj-y += flash.o
 obj-$(CONFIG_CMD_KGDB) += kgdb.o kgdb_stubs.o
 obj-$(CONFIG_I2C_EDID) += edid.o
 obj-$(CONFIG_KALLSYMS) += kallsyms.o
-obj-y += splash.o
+obj-$(CONFIG_SPLASH) += splash.o
 obj-$(CONFIG_SPLASH_SOURCE) += splash_source.o
 ifndef CONFIG_DM_VIDEO
 obj-$(CONFIG_LCD) += lcd.o lcd_console.o
@@ -175,7 +175,7 @@ obj-y += cli.o
 obj-$(CONFIG_CMDLINE) += cli_readline.o
 obj-$(CONFIG_CMD_DFU) += dfu.o
 obj-y += command.o
-obj-y += s_record.o
-obj-y += xyzModem.o
+obj-$(CONFIG_CMD_LOAD) += s_record.o
+obj-$(CONFIG_XYZ_MODEM) += xyzModem.o
 
 CFLAGS_env_embedded.o := -Wa,--no-warn -DENV_CRC=$(shell tools/envcrc 2>/dev/null)
