--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -7,11 +7,11 @@
 
 # There are many options which enable SPI, so make this library available
 ifdef CONFIG_DM_SPI
-obj-y += spi-uclass.o
+obj-$(CONFIG_SPI) += spi-uclass.o
 obj-$(CONFIG_SANDBOX) += spi-emul-uclass.o
 obj-$(CONFIG_SOFT_SPI) += soft_spi.o
 else
-obj-y += spi.o
+obj-$(CONFIG_SPI) += spi.o
 obj-$(CONFIG_SOFT_SPI) += soft_spi_legacy.o
 endif
 
