--- a/board/samsung/tq2440/Makefile
+++ b/board/samsung/tq2440/Makefile
@@ -5,6 +5,7 @@
 # SPDX-License-Identifier:	GPL-2.0+
 #
 
-obj-y	:= tq2440.o
-extra-y	+= lowlevel_init.o
-extra-y	+= debug_led.o
+obj-y	+= lowlevel_init.o
+obj-y 	+= movi.o
+obj-n	+= debug_led.o
+obj-y	+= tq2440.o
